app/styles/components/header.scss
header {

	z-index:10;
	width:100%;
	height:100px;
	display:block;
	position:relative;
	background-color:transparent;

	content {

		display:flex;
		flex-direction:row;
		justify-content:space-between;

		div {

			height:80px;
			display:flex;
			margin:30px 0;
			align-items:center;
			justify-content:center;

			@include media(max-width-480) {
				margin:10px 0;
			}

			.icon {
				width:40px;
				height:45px;
				display:block;
				margin:0 20px 0 0;
				background-size:100% auto;
				background-repeat:no-repeat;
				background-image:url("/static/img/icon.png");
			}

			.logo {
				width:120px;
				height:20px;
				display:block;
				background-repeat:no-repeat;
				background-image:url("/static/img/logo.svg");
			}

		}

		> sidebar-menu {

			display:none;
			color:#ffffff;
			font-size:22px;
			cursor:pointer;
			margin-left:30px;
			align-items:center;
			flex-direction:row;
			justify-content:center;

			* {
				cursor:pointer;
			}

			@include media(max-width-768) {
				display:flex;
			}

			@include media(max-width-375) {
				margin-left:20px;
			}

		}

		> nav {

			margin:0;
			padding:0;
			display:flex;
			align-items:center;
			flex-direction:row;
			justify-content:center;

			@include media(max-width-1000) {
				display:none;
			}

			a {

				color:#ffffff;
				display:block;
				font-size:15px;
				margin:0 0 0 30px;
				padding:0 0 5px 0;
				transition:color 0.5s, border 0.5s;
				border-bottom:3px solid transparent;

				&:not([button])[selected] {
					border-bottom:2px solid #ffffff;
				}

				&:not([button]):hover {
					color:#ff3cac;
					border-bottom:2px solid #ff3cac;
				}

			}

		}

	}

}

